# freegamrust

./: Cargo.toml  README.md
res/: config.toml
src/: config.rs  main.rs  utils.rs
